fixed layout issues in login pages

--- a/frontend/src/styles/auth.module.css
+++ b/frontend/src/styles/auth.module.css
@@ -19,6 +19,8 @@ main {
 
 .googleContainer {
     background-color: var(--color-bg) !important;
+    border: 1px solid var(--color-border);
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +46,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 }
 
 .authFieldContainer {
@@ -72,7 +75,5 @@ main {
         width: 80vw;
         margin: 2rem auto;
     }
-    .authForm h1 {
-        font-size: 1.5rem;
-    }
+
 }
